--- a/Tilt maze.html
+++ b/Tilt maze.html
@@ -880,9 +880,8 @@ function main(timestamp) {
       noteElement.innerHTML = `Congrats, you did it!
         ${!hardMode ? "<p>Press H for hard mode</p>" : ""}
         <p>
-          Follow me
-          <a href="https://twitter.com/HunorBorbely" , target="_blank"
-            >@HunorBorbely</a
+          <a href="./index.html" , target="_blank"
+            >Home</a
           >
         </p>`;
       noteElement.style.opacity = 1;
