--- a/index.html
+++ b/index.html
@@ -3,29 +3,157 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wizz Gamez</title>
+    <title>Wizz Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-300">
+<body class="bg-slate-100">
+
     <section id="body" class=" pt-10">
         <div>
-            <h1 class="text-4xl md:text-6xl font-bold text-white text-center pt-20">Welcome, to <br><span class="text-5xl md:text-8xl text-blue-700">Wizz Gamezz</span></h1>
+            <h1 class="text-4xl md:text-6xl font-bold text-gray-500 text-center pt-20">Welcome, to <br><span class="text-5xl md:text-8xl text-blue-700">Wizz Games</span></h1>
         </div>
     </section>
+
     <section id="links" class="pt-14">
-        <p class="text-center text-blue-700">Simply select a game to play</p>
-        <div class=" text-center pt-10">
-            <a href="candy swap.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Candy Swap</a><br><br><br>
-            <a href="Card memory.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Card memory</a><br><br><br>
-            <a href="Crossy road.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Crossy road</a><br><br><br>
-            <a href="Snake game.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Snake Game</a><br><br><br>
-            <a href="Tilt mazw.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Tilt maze 3D</a><br><br><br>
-            <a href="Tennis.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Tennis</a><br><br><br>
-            <a href="T-rex.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">T-rex Jump</a><br><br><br>
-            <a href="Rock paper scissors.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Rock, Paper, Scissors</a><br><br><br>
-            <a href="Quiz.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Quizz</a><br><br><br>  
-            <a href="Archery.html" class="bg-blue-700 py-4 pl-20 pr-20 text-center rounded-full text-white font-bold hover:bg-blue-500">Archery</a>
+        <p class="text-center text-gray-500 pb-10">Simply select a game to play <br> <i> [If using mobile, enable desktop mode for a better experience] </i></p>
+
+        <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0">
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
+                <a href="./TicTacToe.html">
+                    <img src="images/wiz tac toe.jpg" alt="brick stack" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tic Tac Toe</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Tilt maze.html">
+                    <img src="images/Tailt Maize.jpg" alt="Tilt maze img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tilt Maze</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Towers.html">
+                    <img src="images/wisdoms tower.jpg" alt="Tilt maze img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Towers</h3>
+                </a>
+            </div>
+
         </div>
+
+        <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0 pt-20">
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
+                <a href="./Bird kill.html">
+                    <img src="images/Screenshot 2024-11-02 155744.jpg" alt="bird kill img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Bird Kill</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Brick Stack.html">
+                    <img src="images/Brick stack.jpg" alt="Bird Stack img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Brick Stack</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Card memory.html">
+                    <img src="images/Flip card memory.jpg" alt="Card Memory img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Card Memory</h3>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0 pt-20">
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
+                <a href="./Crossy road.html">
+                    <img src="images/Froggy Crossing.jpg" alt="Crossy road img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Crossy Road</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Lucky Die.html">
+                    <img src="images/Lucky die.jpg" alt="Lucky die img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Lucky Die</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Quiz.html">
+                    <img src="images/Quizz.jpg" alt="Quiz img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">World Quiz</h3>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0 pt-20">
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
+                <a href="./Rock paper scissors.html">
+                    <img src="images/RPS.jpg" alt="Rock paper scissors img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Rock Paper Scissors</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./slots.html">
+                    <img src="images/Slots.jpg" alt="Slots img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Slots</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Space Dodgers.html">
+                    <img  src="images/space invaders.jpg" alt="Space dodger img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Dodger</h3>
+                </a>
+            </div>
+
+        </div>
+
+        <div class="cards flex-row  justify-center space-y-20 md:flex md:space-x-20 md:space-y-0 py-20 ">
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
+                <a href="./space invaders.html">
+                    <img src="images/space dodgers (flipped).jpg" alt="Space invaders img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Inavders</h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./T-rex.html">
+                    <img src="images/dino jump.jpg" alt="T-rex img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Chrome Dino Jump </h3>
+                </a>
+            </div>
+
+            <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
+                <a href="./Tap maize.html">
+                    <img  src="images/tap maze.jpg" alt="Tap maize img" class="rounded-t-lg h-48 w-full">
+                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tap Maize 2D</h3>
+                </a>
+            </div>
+
+        </div>
+        
     </section>
+
+    <section id="footer" class="text-center py-20">
+        <h3>
+            Made with ❤ by <a href="https://destiny-timothy.vercel.app/" class="text-blue-600">Destiny Timothy</a> for Wisdom
+        </h3>
+        <h4>
+            <a href="sources.html" class="text-blue-600">Game Source Code & Credits</a>
+        </h4>
+
+    </section>
+
+    
 </body>
 </html>
