--- a/index.html
+++ b/index.html
@@ -5,38 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wizz Games</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-slate-100">
+<body class="background-image">
+
+
 
     <section id="body" class=" pt-10">
         <div>
-            <h1 class="text-4xl md:text-6xl font-bold text-gray-500 text-center pt-20">Welcome, to <br><span class="text-5xl md:text-8xl text-blue-700">Wizz Games</span></h1>
+            <h1 class="text-4xl md:text-6xl font-bold text-white text-center pt-20">Welcome, to <br><span class="text-6xl md:text-8xl text-blue-400">Wizz Games</span></h1>
         </div>
     </section>
 
     <section id="links" class="pt-14">
-        <p class="text-center text-gray-500 pb-10">Simply select a game to play <br> <i> [If using mobile, enable desktop mode for a better experience] </i></p>
+        <p class="text-center text-white pb-10">Simply select a game to play <br> <i> [ISome games work better in desktop mode] </i></p>
 
         <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0">
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
                 <a href="./TicTacToe.html">
                     <img src="images/wiz tac toe.jpg" alt="brick stack" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tic Tac Toe</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tic Tac Toe</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Tilt maze.html">
                     <img src="images/Tailt Maize.jpg" alt="Tilt maze img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tilt Maze</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tilt Maze</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Towers.html">
                     <img src="images/wisdoms tower.jpg" alt="Tilt maze img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Towers</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Towers</h3>
                 </a>
             </div>
 
@@ -47,21 +50,21 @@
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
                 <a href="./Bird kill.html">
                     <img src="images/Screenshot 2024-11-02 155744.jpg" alt="bird kill img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Bird Kill</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Bird Kill</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Brick Stack.html">
                     <img src="images/Brick stack.jpg" alt="Bird Stack img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Brick Stack</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Brick Stack</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Card memory.html">
                     <img src="images/Flip card memory.jpg" alt="Card Memory img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Card Memory</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Card Memory</h3>
                 </a>
             </div>
 
@@ -72,21 +75,21 @@
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
                 <a href="./Crossy road.html">
                     <img src="images/Froggy Crossing.jpg" alt="Crossy road img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Crossy Road</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Crossy Road</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Lucky Die.html">
                     <img src="images/Lucky die.jpg" alt="Lucky die img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Lucky Die</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Lucky Die</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Quiz.html">
                     <img src="images/Quizz.jpg" alt="Quiz img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">World Quiz</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">World Quiz</h3>
                 </a>
             </div>
 
@@ -97,21 +100,21 @@
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
                 <a href="./Rock paper scissors.html">
                     <img src="images/RPS.jpg" alt="Rock paper scissors img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Rock Paper Scissors</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Rock Paper Scissors</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./slots.html">
                     <img src="images/Slots.jpg" alt="Slots img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Slots</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Slots</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Space Dodgers.html">
                     <img  src="images/space invaders.jpg" alt="Space dodger img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Dodger</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Dodger</h3>
                 </a>
             </div>
 
@@ -122,21 +125,21 @@
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl">
                 <a href="./space invaders.html">
                     <img src="images/space dodgers (flipped).jpg" alt="Space invaders img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Inavders</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Space Inavders</h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./T-rex.html">
                     <img src="images/dino jump.jpg" alt="T-rex img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Chrome Dino Jump </h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Chrome Dino Jump </h3>
                 </a>
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
                 <a href="./Tap maize.html">
                     <img  src="images/tap maze.jpg" alt="Tap maize img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-blue-700 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tap Maize 2D</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Tap Maize 2D</h3>
                 </a>
             </div>
 
@@ -145,11 +148,11 @@
     </section>
 
     <section id="footer" class="text-center py-20">
-        <h3>
-            Made with ❤ by <a href="https://destiny-timothy.vercel.app/" class="text-blue-600">Destiny Timothy</a> for Wisdom
+        <h3 class="text-white">
+            Made with ❤ by <a href="https://destiny-timothy.vercel.app/" class="text-red-600 font-bold">Destiny Timothy</a> for Wisdom
         </h3>
         <h4>
-            <a href="sources.html" class="text-blue-600">Game Source Code & Credits</a>
+            <a href="sources.html" class="text-red-600 font-bold">Game Source Code & Credits</a>
         </h4>
 
     </section>
