Replaced Quiz With Ping Pong Game

--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
             </div>
 
             <div class="container w-4/5 m-auto md:m-0 md:w-1/4 shadow-xl rounded-t-lg rounded-b-lg bg-blue-700">
-                <a href="./Quiz.html">
+                <a href="./pingpong.html">
                     <img src="images/Quizz.jpg" alt="Quiz img" class="rounded-t-lg h-48 w-full">
-                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">World Quiz</h3>
+                    <h3 class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 text-white text-center py-3 font-bold rounded-b-lg hover:bg-blue-600">Ping Pong</h3>
                 </a>
             </div>
-
         </div>
 
         <div class="cards flex-row  justify-center md:flex space-y-20 md:space-x-20 md:space-y-0 pt-20">
